[metadata]
name = feythinblog
author = feythin lau
author-email = feythin.lau@gmail.com
classifier =
    Development Status :: 1 - Planning
        Environment :: Web Environment
        Framework :: Flask
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python

[files]
packages =
    blog

[entry_points]
console_scripts =
    feythinblog = blog.app:app_entry
